Changed ng.translate macro to mc.translate (include macros.html.twig) when you want to use translations in twig (deprication fix). Started implementation of copy of sensors/devices. Fixed stores bug where every owner role could see the all stores. Now only the store owner can see his own stores.

--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -20,6 +20,7 @@
     "SAVE": "Save",
     "YES": "Yes",
     "NO": "No",
+    "A_COPY": "Copy",
     "COPY": "Copy",
     "UNLINK": "Unlink",
     "REFRESH": "Refresh",
