--- a/src/AppBundle/Resources/public/translations/es.json
+++ b/src/AppBundle/Resources/public/translations/es.json
@@ -20,6 +20,7 @@
     "SAVE": "Guardar",
     "YES": "Si",
     "NO": "No",
+    "A_COPY": "Copia",
     "COPY": "Copiar",
     "UNLINK": "Desconectar",
     "REFRESH": "Refrescar",
