--- a/src/AppBundle/Resources/public/translations/nl.json
+++ b/src/AppBundle/Resources/public/translations/nl.json
@@ -20,6 +20,7 @@
     "SAVE": "Opslaan",
     "YES": "Ja",
     "NO": "Nee",
+    "A_COPY": "Kopie",
     "COPY": "Kopieer",
     "UNLINK": "Loskoppelen",
     "REFRESH": "Verversen",
