Implemented copy of sensors so one sensor can occur in different groups. Todo complete rework of sensors, copies and groups (branch).

--- a/src/AppBundle/Resources/public/translations/en.json
+++ b/src/AppBundle/Resources/public/translations/en.json
@@ -412,6 +412,7 @@
         "DELETE_STORE": "Delete store?",
         "COPY_COMPANY_DATA": "Copy all company data?",
         "DELETE_GROUP": "Delete group?",
+        "DELETE_COPY": "Delete copy?",
         "UNLINK_SENSOR": "Unlink sensor / device from store?",
         "NEW_PASSWORD": "Generate new password for user?",
         "HANDLE_NOTIFICATION": "Handle notification?",
